# experimental

./: Cargo.toml  index.html  justfile
.github/workflows/: build.yml  check.yml
app/: Cargo.toml
app/assets/: cube.blend  cube.mtl
app/shaders/: cube.wgsl  cube_reload_test.wgsl  reload_test.wgsl  terain.wgsl  test_watched_shader.wgsl
app/src/: main.rs
game_engine/: Cargo.toml
game_engine/examples/: bouncing_circles.rs  circlee.rs  circles.rs  egui_gui.rs  engine_actors.rs  line_segment.rs  rectangles.rs  rectangles_circles.rs  vello.rs
game_engine/examples/shared/: mod.rs
game_engine/shaders/: filled_circle.wgsl  line_segment.wgsl
game_engine/src/: camera.rs  egui_integration.rs  filled_circle.rs  filled_rectangle.rs  gltf.rs  inputs.rs  lib.rs  line_segment.rs  mesh.rs  obj_loader.rs  raw.rs  windowed_device.rs
game_engine/src/test_shader/: default_mesh.wgsl
inspector/: Cargo.toml
inspector/src/: main.rs
physics/: Cargo.toml  README.md
physics/benches/: collisions.rs
physics/examples/: capsule.rs  collision.rs  fall.rs  inclined_fall.rs  pendulum.rs  penetration.rs  resting.rs  springs.rs
physics/examples/shared/: draw.rs  mod.rs
physics/src/: constraint.rs  draw.rs  geometry.rs  lib.rs  solver.rs
physics/src/scenarios/: collision.rs  inclined_fall.rs  many_particles.rs  mod.rs  pendulum.rs  penetration.rs  resting.rs  simple_fall.rs  springs.rs
renderer/: Cargo.toml
renderer/examples/: actors.rs  circle.rs  circles.rs  line_segment.rs  rectangle.rs  rectangle_circle.rs  rectangles.rs  rectangles_circles.rs  stroke_circle.rs  stroke_circles.rs  stroke_rectangle.rs
renderer/examples/shared/: mod.rs
renderer/shaders/: circle.wgsl  circle_line.wgsl  filled_circle.wgsl  filled_rectangle.wgsl  line_segment.wgsl  line_segment_2.wgsl  rectangle.wgsl  rectangle_line.wgsl  stroke_circle.wgsl  stroke_rectangle.wgsl
renderer/shaders/lib/: model_matrix.wgsl
renderer/src/: actor.rs  api_experiments.rs  buffers.rs  camera.rs  camera2.rs  circle_rendering.rs  colors.rs  context.rs  custom_mesh_renderer.rs  file_watcher.rs  filled_circle.rs  filled_rectangle.rs  gpu_context.rs  lib.rs  line_rendering.rs  line_segment.rs  macros.rs  mesh.rs  mesh_rendering.rs  pipeline.rs  projection.rs  raw.rs  rectangle_rendering.rs  render_bundle.rs  render_pass.rs  renderer_api.rs  rendering_context.rs  resource_watcher.rs  scene_node.rs  shader_store.rs  store.rs  stroke_circle.rs  stroke_rectangle.rs  transform.rs  web_gpu.rs
renderer/src/primitives/: quad.rs
renderer/src/resource_store/: bind_group_layout.rs  gpu_mesh.rs  mod.rs  pipeline_layout.rs  reload_command.rs  render_pipeline.rs  shader.rs  shader_include.rs  store_base.rs
scripts/: run_bins.sh  run_examples.sh
src/: main.rs  physics.rs
