[workspace]
members = ["app", "physics", "game_engine", "renderer", "inspector"]
resolver = "2"

[workspace.dependencies]
glam = { version = "0.25", features = ["bytemuck"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
pollster = "0.3"
eyre = "0.6"
color-eyre = "0.6"
criterion = "0.5"
rand = "0.8"
winit = {version = "0.29", features = ["rwh_06"]}
dyn-clone = "1.0"
wgpu = { version = "0.19", features = ["naga-ir"] }
noise = "0.8"
itertools = "0.12"
egui = { version = "0.26", features = ["color-hex", "default_fonts", "log", "mint"] }
bytemuck = { version = "1.16.0", features = ["derive", "must_cast"] }
naga_oil = "0.13"
naga = "0.20"
thiserror = "1.0"
