[package]
name = "experimental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# comfy 0.3 uses glam 0.24
glam = { workspace = true }
physics = { path = "../physics" }
game_engine = { path = "../game_engine" }
renderer = { path = "../renderer" }
pollster = { workspace = true }
eyre = { workspace = true }
winit = { workspace = true }
color-eyre = { workspace = true }
rand = { workspace = true }
wgpu = { workspace = true }
noise = { workspace = true }
