[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
renderer = { path = "../renderer" }
physics = { path = "../physics" }
itertools = { workspace = true }
egui = { git = "https://github.com/emilk/egui", package = "egui", features = ["color-hex", "default_fonts", "log", "mint"] }
egui-winit = { git = "https://github.com/emilk/egui", package = "egui-winit" }
egui-wgpu = { git = "https://github.com/emilk/egui", package = "egui-wgpu" }

[dev-dependencies]
color-eyre = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
