[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
renderer = { path = "../renderer" }
physics = { path = "../physics" }
itertools = { workspace = true }
egui = { workspace = true }
egui-winit = "0.26"
egui-wgpu = "0.26"

[dev-dependencies]
color-eyre = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
