[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
macroquad = "0.4"
criterion = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "collisions"
harness = false