[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
wgpu = { git = "https://github.com/gfx-rs/wgpu", package = "wgpu" }

[dev-dependencies]
color-eyre = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
