[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
eyre = { workspace = true }
glam = { workspace = true }
slotmap = "1.0.7"
notify = "6.1.1"
tracing = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
color-eyre = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
image = "0.24"
